--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     depends_on:
       - db 
+    volumes:
+      - .:/app
       
 volumes:
   postgres_data:
