--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,20 +9,28 @@ services:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+
   fastapi_app:
     build: .
     ports:
-      - "8000:8000" 
+      - "8000:8000"
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     depends_on:
-      - db 
+      db:
+        condition: service_healthy  
+    env_file:
+      - .env
     volumes:
       - .:/app
-      
+
 volumes:
   postgres_data:
